--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </font>
       </head>
   <body>
-    <img src="C:\web prj\HTML-first sit\images\Screenshot 2022-12-08 001857-modified.png"height="180" width="150" alt="pic">
+    <img src="log.png"height="180" width="150" alt="pic">
 <font size="5">
 <p style="color:red">  🏬hotels   🚍bus     train🚅     air✈️ </p>
 </font>
