--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </font>
       </head>
   <body>
-    <img src="log.png"height="180" width="150" alt="pic">
+    <img src="images/log.png"height="180" width="150" alt="pic">
 <font size="5">
 <p style="color:red">  🏬hotels   🚍bus     train🚅     air✈️ </p>
 </font>
