--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 </table>
 <hr />
-<p><a href="file:///C:/web%20prj/HTML-first%20sit/payment.html">Payment</a></p>
-<p><a href="file:///C:/web%20prj/HTML-first%20sit/contact%20us%20.html">contact us</a></p>
-<p><a href="file:///C:/web%20prj/HTML-first%20sit/buy%20ticket.html">buy</a></p>
+<p><a href="payment.html">Payment</a></p>
+<p><a href="contact us .html">contact us</a></p>
+<p><a href="buy ticket.html">buy</a></p>
 
 
 <h4>Rating</h4>
