--- a/buy ticket.html
+++ b/buy ticket.html
@@ -18,7 +18,7 @@
       <input type="name">
       <labe> age: </label>
         <input type="number">
-        <lable><p><a href="file:///C:/web%20prj/HTML-first%20sit/payment.html">Payment</a></p></lable>
+        <lable><p><a href="payment.html">Payment</a></p></lable>
 
 
 
